--- a/Go-K8s/deploy/deploy-consumer.yaml
+++ b/Go-K8s/deploy/deploy-consumer.yaml
@@ -48,15 +48,15 @@ spec:
                 name: ibmmq-secret
                 key: APP_PASSWORD
           - name: QMGR
-            value: 'QM1' # Your queue manager
+            value: 'MQoC' # Your queue manager
           - name: QUEUE_NAME
-            value: 'DEMO.QUEUE' # Your queue name
+            value: 'SYSTEM.DEFAULT.LOCAL.QUEUE' # Your queue name
           - name: HOST
-            value: 'qm1-6d0c.qm2.eu-gb.mq.appdomain.cloud' # Your hostname
+            value: 'mqoc-419f.qm.eu-gb.mq.appdomain.cloud' # Your hostname
           - name: PORT
-            value: '31274' # Your port number
+            value: '31175' # Your port number
           - name: CHANNEL
-            value: 'CLOUD.APP.SVRCONN' # Your channel name
+            value: 'CLOUD.ADMIN.SVRCONN' # Your channel name
           - name: TOPIC_NAME
             value: 'dev/' # Your topic name
 ---
@@ -77,9 +77,9 @@ spec:
     - type: ibmmq
       metadata:
         queueDepth: '5' # Queue length target for HPA. Default: 5 messages
-        host: 'https://web-qm1-6d0c.qm2.eu-gb.mq.appdomain.cloud/ibmmq/rest/v2/admin/action/qmgr/QM1/mqsc' # Your admin REST endpoint
-        queueManager: 'QM1' # Your queue manager
-        queueName: 'DEMO.QUEUE' # Your queue name
+        host: 'https://web-mqoc-419f.qm.eu-gb.mq.appdomain.cloud/ibmmq/rest/v2/admin/action/qmgr/MQoC/mqsc' # Your admin REST endpoint
+        queueManager: 'MQoC' # Your queue manager
+        queueName: 'SYSTEM.DEFAULT.LOCAL.QUEUE' # Your queue name
         tlsDisabled: 'false' # Set 'true' to disable TLS. Default: false
         usernameFromEnv: '' # Optional: Provide admin username from env instead of as a secret
         passwordFromEnv: '' # Optional: Provide admin password from env instead of as a secret
