--- a/Go-K8s/deploy/deploy-producer.yaml
+++ b/Go-K8s/deploy/deploy-producer.yaml
@@ -42,13 +42,13 @@ spec:
           - name: QMGR
             value: 'MQoC' # Your queue manager
           - name: QUEUE_NAME
-            value: 'SYSTEM.DEFAULT.LOCAL.QUEUE' # Your queue name
+            value: 'DEMO.QUEUE' # Your queue name
           - name: HOST
             value: 'mqoc-419f.qm.eu-gb.mq.appdomain.cloud' # Your hostname
           - name: PORT
             value: '31175' # Your port number
           - name: CHANNEL
-            value: 'CLOUD.ADMIN.SVRCONN' # Your channel name
+            value: 'CLOUD.APP.SVRCONN' # Your channel name
           - name: TOPIC_NAME
             value: 'dev/' # Your topic name
       restartPolicy: Never
